minor refactor: remove URL constructor deprecation warnings